Изменил MainPage.xaml

--- a/XamarinExample/XamarinExample/MainPage.xaml
+++ b/XamarinExample/XamarinExample/MainPage.xaml
@@ -5,7 +5,7 @@
              x:Class="XamarinExample.MainPage">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+            <Label Text="Слава привет из студии!"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
